@@ -1,6 +1,7 @@
-[B]1.1.0[/B] - 03-06-2018
+[B]1.1.0[/B] - 04-06-2018
 - Added &quality= plugin route call for manual quality selection (overrides setting in options)
 - Added MPEG-DASH playback capability
+- Added MPEG-DASH url output for resolved urls through streamlink
 - Improved README.md
 
-1.0.0 - Initial Version
+[B]1.0.0[/B] - Initial Version
